<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout

    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end"
    android:layoutDirection="rtl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserActivities.MainActivity"
    >



    <include layout="@layout/navigation_layout"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/board_bg"
        android:orientation="vertical"
        >

        <include layout="@layout/toolbar_layout" />



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:maxHeight="1000dp"
            android:layout_gravity="center"
            android:fillViewport="true"
            >

            <LinearLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >




                <!-- Notifications -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rpt_bold"
                    android:text="لوحة الإعلانات"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <ListView
                    android:id="@+id/announcementsListView"
                    android:layout_width="match_parent"
                    android:layout_height="275dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="5dp"
                    android:padding="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/rpt_bold"
                    android:text="التطبيقات"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <!-- Grid Layout for important options -->
                <GridLayout
                    android:id="@+id/grid_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:columnCount="3"
                    android:textDirection="rtl">

                    <LinearLayout
                        android:id="@+id/arabic_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/announcements" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/announcements"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/english_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/upcoming_exams" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/upcoming_exams"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/materials_page_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/materials" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/materials_page"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/our_books_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/our_books" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/our_books"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/grades_calculator_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/grades_calculator"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/upload_materials_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/upload_materials" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/upload_materials"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/whatsapp_groups_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/whatsapp_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/whatsapp_groups"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/contact_us_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/contact_us" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/contact_us"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/donate_button"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_square"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:padding="20dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/parrot" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/rpt_bold"
                            android:text="@string/donate"
                            android:textAlignment="center"
                            android:textSize="14sp" />
                    </LinearLayout>

                </GridLayout>

            </LinearLayout>
        </ScrollView>




    </LinearLayout>
    <include
        layout="@layout/bottom_sheet_to_include"
        tools:visibility="gone"
        />

</androidx.drawerlayout.widget.DrawerLayout>
